   particular, the event structure now supports multiple report blocks.

 * Added 'BlindTransfer' and 'AttendedTransfer' events. These events are
   raised when a blind transfer/attended transfer completes successfully.
   They contain information about the transfer that just completed, including
   the location of the transfered channel.

CDR (Call Detail Records)
------------------
 * Significant changes have been made to the behavior of CDRs. The CDR engine
   was effectively rewritten and built on the Stasis message bus. For a full
   definition of CDR behavior in Asterisk 12, please read the specification
   on the Asterisk wiki (wiki.asterisk.org).

 * CDRs will now be created between all participants in a bridge. For each
   pair of channels in a bridge, a CDR is created to represent the path of
   communication between those two endpoints. This lets an end user choose who
   to bill for what during bridge operations with multiple parties.

 * The duration, billsec, start, answer, and end times now reflect the times
   associated with the current CDR for the channel, as opposed to a cumulative
   measurement of all CDRs for that channel.

 * When a CDR is dispatched, user defined CDR variables from both parties are
   included in the resulting CDR. If both parties have the same variable, only
   the Party A value is provided.

 * Added a new option to cdr.conf, 'debug'. When enabled, significantly more
   information regarding the CDR engine is logged as verbose messages. This
   option should only be used if the behavior of the CDR engine needs to be
   debugged.

 * Added CLI command 'cdr set debug {on|off}'. This toggles the 'debug' setting
   normally configured in cdr.conf.

 * Added CLI command 'cdr show active {channel}'. When {channel} is not
   specified, this command provides a summary of the channels with CDR
   information and their statistics. When {channel} is specified, it shows