@@ -579,6 +579,9 @@ AMI (Asterisk Manager Interface)
    They contain information about the transfer that just completed, including
    the location of the transfered channel.
 
+ * Added a 'security' class to AMI which outputs the required fields for
+   security messages similar to the log messages from res_security_log
+
 CDR (Call Detail Records)
 ------------------
  * Significant changes have been made to the behavior of CDRs. The CDR engine
